--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 	.modify_this{
 		color: pink;
-		font-weight: bold;
+		font-weight: lighter;
 		background-color: black;
 	}
 	.modify_this_too {
