change the font weight to 100px for modify_this

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 	.modify_this{
 		color: pink;
-		font-weight: lighter;
+		font-weight: 100px;
 		background-color: black;
 	}
 	.modify_this_too {
