--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	.modify_this{
 		color: pink;
 		font-weight: lighter;
-		background-color: black;
+		background-color: aliceblue;
 	}
 	.modify_this_too {
 		color: pink;
